# 3d-test

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md
shaders/: object.frag  object.vert
src/: main.cpp
src/core/: Camera.cpp  Camera.h  Physics.h  RigidBody.h  SimState.h
src/platform/: Input.cpp  Input.h  Window.cpp  Window.h
src/rendering/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
